# course-agentops

./: .gitignore  01_example.py  02_multi-agent.py  03_altogether.py  04_pyautogen.py  README.md  requirements.txt
story_flow/: README.md  poem.txt  pyproject.toml
story_flow/src/story_flow/: main.py
