[project]
name = "story_flow"
version = "0.1.0"
description = "story_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agentops>=0.4.17",
    "crewai[tools]>=0.120.1,<1.0.0",
]

[project.scripts]
kickoff = "story_flow.main:kickoff"
run_crew = "story_flow.main:kickoff"
plot = "story_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
